@@ -1,6 +1,11 @@
 from ftw.upgrade.interfaces import IClassMigratedEvent
-from zope.component.interfaces import ObjectEvent
 from zope.interface import implementer
+
+try:
+    from zope.interface.interfaces import ObjectEvent
+except ImportError:
+    # BBB deprecated since 2011 ;)
+    from zope.component.interfaces import ObjectEvent
 
 
 @implementer(IClassMigratedEvent)
