@@ -7,6 +7,9 @@ Changelog
 
 - This Plone add-on now requires six >= 1.12.0. [mbaechtold]
 
+- Remove a bunch of deprecation warnings
+  Fixes `issue 204 <https://github.com/4teamwork/ftw.upgrade/issues/204>`. [ale-rt]
+
 
 3.0.0 (2020-03-23)
 ------------------
